chore: Sonar fixes (#169)